# udp_tcp_forwarder

./: .gitmodules  README.md
config/: cfg.json
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  core.h  utf_core.h
src/core/aux/: formatted_logger.h  json_parser.cpp  json_parser.h
src/core/endpoints/: endpoint.h
src/core/scheduling/: client_request.h  event.h  forwarder.h  server_response.h
src/impl/: CMakeLists.txt  Configuration.h
src/impl/aux/include/: configuration.h  edr_logger.h
src/impl/aux/source/: edr_logger.cpp
src/impl/endpoints/include/: endpoint_impl.h  tcp_client.h  udp_server.h
src/impl/endpoints/source/: tcp_client.cpp  udp_server.cpp
src/impl/scheduling/include/: rr_forwarder.h
src/impl/scheduling/source/: rr_forwarder.cpp
useful_scripts/: tcp_echo.sh  udp_generator.sh
